--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ section {
 
 #sessao-bemvindo .banner {
 	height: 500px;
-	background-image: url('./img/banner5.png');
+	background-image: url('../img/banner5.png');
 	background-position: center;
 	background-size: cover;
 }
@@ -113,7 +113,7 @@ section {
 .sessao-minibanner {
 	width: 300px;
 	height: 400px;
-	background-image: url('./img/loja\ 02.jpg');
+	background-image: url('../img/loja\ 02.jpg');
 	background-position: center;
 	background-size: cover;
 	float: left;
@@ -155,7 +155,7 @@ section {
 #sessao-sobre .sessao-minibanner {
 	float: right;
 	margin-right: 50px;
-	background-image: url('./img/loja\ 01.jpg');
+	background-image: url('../img/loja\ 01.jpg');
 }
 
 #sessao-sobre .sessao-descricao {
@@ -186,24 +186,24 @@ section {
 }
 
 #img1 {
-	background-image: url('./img/galeria1.jpg');
+	background-image: url('../img/galeria1.jpg');
 	margin-left: 0;
 }
 
 #img2 {
-	background-image: url('./img/galeria2.jpg');
+	background-image: url('../img/galeria2.jpg');
 }
 
 #img3 {
-	background-image: url('./img/galeria3.jpg');
+	background-image: url('../img/galeria3.jpg');
 }
 
 #img4 {
-	background-image: url('./img/galeria4.jpg');
+	background-image: url('../img/galeria4.jpg');
 }
 
 #img5 {
-	background-image: url('./img/galeria5.jpg');
+	background-image: url('../img/galeria5.jpg');
 	margin-right: 0;
 }
 
@@ -214,16 +214,16 @@ section {
 }
 
 #img6 {
-	background-image: url('./img/galeria6.jpg');
+	background-image: url('../img/galeria6.jpg');
 	margin-left: 0;
 }
 
 #img7 {
-	background-image: url('./img/galeria7.jpg');
+	background-image: url('../img/galeria7.jpg');
 }
 
 #img8 {
-	background-image: url('./img/galeria8.jpg');
+	background-image: url('../img/galeria8.jpg');
 	margin-right: 0;
 }
 
@@ -234,20 +234,20 @@ section {
 }
 
 #img9 {
-	background-image: url('./img/galeria9.jpg');
+	background-image: url('../img/galeria9.jpg');
 	margin-left: 0;
 }
 
 #img10 {
-	background-image: url('./img/galeria10.jpg');
+	background-image: url('../img/galeria10.jpg');
 }
 
 #img11 {
-	background-image: url('./img/galeria11.jpg');
+	background-image: url('../img/galeria11.jpg');
 }
 
 #img12 {
-	background-image: url('./img/galeria12.jpg');
+	background-image: url('../img/galeria12.jpg');
 	margin-right: 0;
 }
 
