--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ section {
 
 #sessao-bemvindo .banner {
 	height: 500px;
-	background-image: url('./img/banner5.jpg');
+	background-image: url('./img/banner\5.jpg');
 	background-position: center;
 	background-size: cover;
 }
